# mujinvision

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  config.h.in  mujinvision-config.cmake.in
cmake/: Findgtest.cmake
include/mujinvision/: detector.h  detectormanager.h  geometry.h  imagesubscriber.h  imagesubscribermanager.h  mujinimage.h  mujinvisionmanager.h  opencv_types_c.h  visionexceptions.h  visionparameters.h
samples/: CMakeLists.txt  sample.properties  templateapp.cpp
src/: .mujinvisionmanager.cpp.swp  CMakeLists.txt  logging.h  mujinvisionmanager.cpp  mujinzmq.cpp
test/: CMakeLists.txt  setuprepoenv.bash  testjson.cpp  testmain.cpp
