# find_package(gtest REQUIRED)
# if (GTEST_FOUND)
#   macro(build_test name)
#     set(TEST_SOURCES testmain.cpp testjson.cpp)
#     include_directories(${GTEST_INCLUDE_DIRS})
#     link_directories(${GTEST_LIBRARY_DIRS})
#     add_executable(${name} ${TEST_SOURCES})
#     add_dependencies(${name} libmujinvision)
#     target_link_libraries(${name} libmujinvision ${GTEST_LIBRARIES} pthread)
#     install(TARGETS ${name} DESTINATION bin)
#   endmacro()
#   build_test(testmujinvision)
# else()
#   message("googletest not found, will not build test")
# endif()
